--- a/example.html
+++ b/example.html
@@ -91,7 +91,7 @@
   </main>
 
   <footer>
-    <small>© 2025 Tu Nombre</small>
+    <small>Contenido bajo licencia Creative Commons CC-BY-SA 4.0 — 2025 Hishan Farfán</small>
   </footer>
 
   <script src="script.js" defer></script>
