--- a/problemas/1-2-analisis-dimensional.html
+++ b/problemas/1-2-analisis-dimensional.html
@@ -169,7 +169,7 @@
   </main>
 
   <footer>
-    <small>© 2025 Tu Nombre — Material docente para uso educativo</small>
+    <small>Contenido bajo licencia Creative Commons CC-BY-SA 4.0 — 2025 Hishan Farfán</small>
   </footer>
 
   <!-- usa el JS general (toggle tema) del proyecto intro-fisica -->
