--- a/problemas/1-3-cifras-significativas.html
+++ b/problemas/1-3-cifras-significativas.html
@@ -124,12 +124,9 @@
   </main>
 
   <footer>
-    <small>
-      <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="license noopener noreferrer">
-        <img src="https://licensebuttons.net/l/by-sa/4.0/88x31.png" alt="Licencia Creative Commons BY-SA 4.0">
-      </a>
-      2025 — Tu Nombre
-    </small>
+  <footer>
+    <small>Contenido bajo licencia Creative Commons CC-BY-SA 4.0 — 2025 Hishan Farfán</small>
+  </footer>
   </footer>
 
   <script src="../script.js" defer></script>
