--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li><a href="problemas/1-2-analisis-dimensional.html">1.2. Análisis dimensional</a></li>
         <li><a href="problemas/1-3-cifras-significativas.html">1.3. Precisión y cifras significativas</a></li>
         <li><a href="problemas/1-4-coordenadas-trigonometria.html">1.4. Sistemas de coordenadas y trigonometría</a></li>
+        <li><a href="problemas/1-5-conversion-unidades.html">1.5. Conversión de unidades</a></li>
       </ol>
     </section>
 
@@ -92,7 +93,7 @@
   </main>
 
   <footer>
-    <small>© 2025 Tu Nombre</small>
+    <small>Contenido bajo licencia Creative Commons CC-BY-SA 4.0 — 2025 Hishan Farfán</small>
   </footer>
 
   <script src="script.js" defer></script>
